--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,5 +40,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "jest": {
+    "transformIgnorePatterns": [
+      "/node_modules/(?!(axios|react-day-picker)/)"
+    ]
+  },
+  "devDependencies": {
+    "jest": "^27.5.1"
   }
 }
