--- a/frontend/package.json
+++ b/frontend/package.json
@@ -47,7 +47,10 @@
     ]
   },
   "devDependencies": {
-    "jest": "^27.5.1",
+    "babel-jest": "^29.3.1",
+    "jest": "26.0.1",
+    "jest-enviroment-jsdom": "^27.4.4",
+    "regenerator-runtime": "^0.13.11",
     "supertest": "^6.3.3"
   }
 }
