--- a/backend/public/.htaccess
+++ b/backend/public/.htaccess
@@ -1,3 +1,5 @@
+Header set Access-Control_Allow-Origin "*"
+
 <IfModule mod_rewrite.c>
     <IfModule mod_negotiation.c>
         Options -MultiViews -Indexes
